package dataaccess;

import java.io.File;
import java.io.*;
import java.nio.file.FileSystems;
import java.nio.file.Files;
import java.nio.file.Path;
import java.util.HashMap;
import java.util.List;

import business.Book;
import business.BookCopy;
import business.Checkout;
import business.LibraryMember;
import business.LibrarySystemException;

public class DataAccessFacade implements DataAccess {

	enum StorageType {
		BOOKS, MEMBERS, USERS
	}

	public static final String OUTPUT_DIR = System.getProperty("user.dir")
			+ File.separator + "src" + File.separator + "dataaccess"
			+ File.separator + "storage";
	public static final String DATE_PATTERN = "MM/dd/yyyy";

	// implement: other save operations
	public void saveNewMember(LibraryMember member) throws LibrarySystemException {
		HashMap<String, LibraryMember> mems = readMemberMap();
		String memberId = member.getMemberId();
		if (mems.containsKey(memberId)) {
			String errorMessage = "Could not save Member: " + memberId + " because member with that id exist already.";
			throw new LibrarySystemException(errorMessage);
		} else {mems.put(memberId, member);
		saveToStorage(StorageType.MEMBERS, mems);}
	}

	public void addBook(Book book) throws LibrarySystemException {
		HashMap<String, Book> books = readBooksMap();
		String isbn = book.getIsbn();
		if (books.containsKey(isbn)) {
			String errorMessage = "Could not add book: " + isbn + " because book with that isbn exist already.";
			throw new LibrarySystemException(errorMessage);
		} else {
			books.put(isbn, book);
			saveToStorage(StorageType.BOOKS, books);
		}
	}

	@SuppressWarnings("unchecked")
	public HashMap<String, Book> readBooksMap() {
		// Returns a Map with name/value pairs being
		// isbn -> Book
		return (HashMap<String, Book>) readFromStorage(StorageType.BOOKS);
	}

	@SuppressWarnings("unchecked")
	public HashMap<String, LibraryMember> readMemberMap() {
		// Returns a Map with name/value pairs being
		// memberId -> LibraryMember
		return (HashMap<String, LibraryMember>) readFromStorage(
				StorageType.MEMBERS);
	}

	@SuppressWarnings("unchecked")
	public HashMap<String, User> readUserMap() {
		// Returns a Map with name/value pairs being
		// userId -> User
		return (HashMap<String, User>) readFromStorage(StorageType.USERS);
	}

	@Override
	public void updateBook(String isbn, Book book) {
		HashMap<String, Book> books = readBooksMap();
		System.out.println("Before: " + books.keySet().toArray().length);
		books.put(isbn, book);
		saveToStorage(StorageType.BOOKS, books);
		System.out.println("After: " + books.keySet().toArray().length);
	}

	@Override
	public void updateMember(String memberId, LibraryMember member) {
		HashMap<String, LibraryMember> members = readMemberMap();
		members.put(memberId, member);
		saveToStorage(StorageType.MEMBERS, members);
	}

	/////load methods - these place test data into the storage area
	///// - used just once at startup  

	static void loadBookMap(List<Book> bookList) {
		HashMap<String, Book> books = new HashMap<String, Book>();
		bookList.forEach(book -> books.put(book.getIsbn(), book));
		saveToStorage(StorageType.BOOKS, books);
	}

	static void loadUserMap(List<User> userList) {
		HashMap<String, User> users = new HashMap<String, User>();
		userList.forEach(user -> users.put(user.getId(), user));
		saveToStorage(StorageType.USERS, users);
	}

	static void loadMemberMap(List<LibraryMember> memberList) {
		HashMap<String, LibraryMember> members = new HashMap<String, LibraryMember>();
		memberList.forEach(member -> members.put(member.getMemberId(), member));
		saveToStorage(StorageType.MEMBERS, members);
	}

	static void saveToStorage(StorageType type, Object ob) {
		ObjectOutputStream out = null;
		try {
			Path path = FileSystems.getDefault().getPath(OUTPUT_DIR, type.toString());
			out = new ObjectOutputStream(Files.newOutputStream(path));
			out.writeObject(ob);
		} catch (IOException e) {
			e.printStackTrace();
		} finally {
			if (out != null) {
				try {
					out.close();
				} catch(Exception e) {
					e.printStackTrace();
				}
			}
		}
	}

	static Object readFromStorage(StorageType type) {
		ObjectInputStream in = null;
		Object retVal = null;
		try {
			Path path = FileSystems.getDefault().getPath(OUTPUT_DIR, type.toString());
			in = new ObjectInputStream(Files.newInputStream(path));
			retVal = in.readObject();
		} catch (Exception e) {
			e.printStackTrace();
		} finally {
			if (in != null) {
				try {
					in.close();
				} catch(Exception e) {
					e.printStackTrace();
				}
			}
		}
		return retVal;
	}
	
	final static class Pair<S,T> implements Serializable{
		
		S first;
		T second;
		Pair(S s, T t) {
			first = s;
			second = t;
		}
		@Override 
		public boolean equals(Object ob) {
			if(ob == null) return false;
			if(this == ob) return true;
			if(ob.getClass() != getClass()) return false;
			@SuppressWarnings("unchecked")
			Pair<S,T> p = (Pair<S,T>)ob;
			return p.first.equals(first) && p.second.equals(second);
		}
		
		@Override 
		public int hashCode() {
			return first.hashCode() + 5 * second.hashCode();
		}
		@Override
		public String toString() {
			return "(" + first.toString() + ", " + second.toString() + ")";
		}
		private static final long serialVersionUID = 5399827794066637059L;
	}

	@Override
	public Book searchBook(String isbn) {
		HashMap<String, Book> books = readBooksMap();
		return books.get(isbn);
	}

	@Override
	public Checkout getCheckout(String isbn, int copyNum) {
		// Get all members
		HashMap<String, LibraryMember> members = readMemberMap();

		// Search through all members' checkouts
		for (LibraryMember member : members.values()) {
			for (Checkout checkout : member.getCheckouts()) {
				BookCopy copy = checkout.getBookCopy();
				if (copy.getBook().getIsbn().equals(isbn) && copy.getCopyNum() == copyNum) {
					// Found the checkout for this book copy
					return checkout;
				}
			}
		}
		return null;
	}

}
