@startuml

package business {
  class Address {
   - String street
   - String city
   - String state
   - String zip
   + getStreet() : String
   + getCity() : String
   + getState() : String
   + getZip() : String
  }

  class Person {
   - String firstName
   - String lastName
   - String telephone
   - Address address
   + getFirstName() : String
   + getLastName() : String
   + getTelephone() : String
   + getAddress() : Address
  }

  class Author extends Person {
   - String bio
   + getBio() : String
  }

  class Book {
   - String isbn
   - String title
   - int maxCheckoutLength
   + getTitle() : String
   + getIsbn() : String
   + getAuthors() : List<Author>
  }

  class BookCopy {
   - int copyNum
   - boolean isAvailable
   + getCopyNum() : int
   + isAvailable() : boolean
  }

  class LibraryMember extends Person {
   - String memberId
   + getMemberId() : String
  }

  class Checkout {
   - LocalDate checkoutDate
   - LocalDate returnDate
   + getMember() : LibraryMember
   + getBookCopy() : BookCopy
  }

  class SystemController {
   + login(String id, String password) : void
   + logout() : void
   + allMemberIds() : List<String>
   + allBookIds() : List<String>
  }
}

package dataaccess {
  enum Auth {
   LIBRARIAN
   ADMIN
   BOTH
  }

  class User {
   - String id
   - String password
   + getId() : String
   + getPassword() : String
   + getAuthorization() : Auth
  }

  interface DataAccess {
   + readBooksMap() : HashMap<String, Book>
   + readUserMap() : HashMap<String, User>
   + readMemberMap() : HashMap<String, LibraryMember>
  }

  class DataAccessFacade implements DataAccess {
   + readBooksMap() : HashMap<String, Book>
   + readUserMap() : HashMap<String, User>
   + readMemberMap() : HashMap<String, LibraryMember>
  }
}

package librarysystem {
  interface LibWindow {
   + init() : void
   + isInitialized() : boolean
   + setVisible(boolean b) : void
  }

  class LibrarySystem implements LibWindow {
   + init() : void
   + isInitialized() : boolean
   + setVisible(boolean b) : void
  }

  class MainWindow extends JFrame implements LibWindow {
   + init() : void
   + isInitialized() : boolean
   + setVisible(boolean b) : void
  }

  class CheckoutBookPanel extends MainWindow {
 
  }
}

Auth "1" <-- "0..*" User
SystemController  --> User
Address "1" <-- "0..*" Person
LibraryMember "1" -- "0..*" Checkout
Book "1" -- "1..*" BookCopy
Book "0..*" --> "1..*" Author
Checkout "0..*" --> "1" BookCopy
SystemController ..> DataAccessFacade
CheckoutBookPanel --> SystemController

@enduml